# daily-til

202508/: 20250812.md  20250813.md  20250818.md  20250819.md  20250820.md
code_example/: huggingface_tutorial.ipynb
code_example/llm/: pyproject.toml
code_example/mcp-tutorial/: README.md  mcp-server.py  mcp-test.ipynb  pyproject.toml
