[project]
name = "mcp-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.31",
    "mcp[cli]>=1.13.1",
    "python-dotenv>=1.1.1",
    "jupyter>=1.1.1",
    "ipykernel>=6.30.1",
]
